update eventEmitter
